<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemhome"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="always"
        android:title="Home"
        />
<item
    android:id="@+id/item0"
    android:icon="@drawable/ic_baseline_menu_24"
    android:title="Menu"
    app:showAsAction="always">

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/item1"
            android:icon="@drawable/aboutus_ic"
            android:title="@string/aboutus"
            app:showAsAction="collapseActionView"/>/>
        <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_membership"
            android:title="@string/membership"
            app:showAsAction="collapseActionView"/>
        <item
            android:id="@+id/item3"
            android:icon="@drawable/ic_schools"
            android:title="@string/schools"
            app:showAsAction="collapseActionView"/>
        <item
            android:id="@+id/item4"
            android:icon="@drawable/ic_teachers_staff"
            android:title="@string/teachersandstaff"
            app:showAsAction="collapseActionView"/>
        <item
            android:id="@+id/item5"
            android:icon="@drawable/ic_minutes"
            android:title="@string/minutes"
            app:showAsAction="collapseActionView"/>
        <item
            android:id="@+id/item6"
            android:icon="@drawable/ic_event"
            android:title="@string/events"
            app:showAsAction="collapseActionView"/>

    </menu>

</item>

</menu>